# goose

./: config.yaml
crates/goose-api/: Cargo.toml  README.md  config
crates/goose-api/src/: api_sessions.rs  config.rs  handlers.rs  lib.rs  main.rs  routes.rs  tests.rs
crates/goose-cli/src/commands/: configure.rs
crates/goose-cli/src/session/: mod.rs
crates/goose-server/src/routes/: extension.rs
crates/goose/src/agents/: extension.rs  extension_manager.rs
crates/goose/src/config/: extensions.rs  mod.rs
crates/goose/src/tracing/: langfuse_layer.rs
crates/goose/tests/: providers.rs
crates/mcp-client/examples/: clients.rs  sse.rs  stdio.rs  stdio_integration.rs
crates/mcp-client/src/transport/: mod.rs  sse.rs  stdio.rs
