[package]
name = "goose-api"
version = "0.1.0"
edition = "2021"

[dependencies]
goose = { path = "../goose" }
goose-mcp = { path = "../goose-mcp" }
mcp-client = { path = "../mcp-client" }
tokio = { version = "1", features = ["full"] }
warp = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json", "time"] }
config = "0.13"
jsonwebtoken = "8"
futures = "0.3"
futures-util = "0.3"
# For session IDs
uuid = { version = "1", features = ["serde", "v4"] }
 # Add dynamic-library for extension loading
